<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:padding="7dp"
	    android:orientation="vertical"
	    android:keepScreenOn="true"
	    tools:context=".StartPage" >

	    <Spinner
	       android:id="@+id/langSpinner"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:gravity="center_vertical|center_horizontal" 
	       android:prompt="@string/choose_language" />
	
	    <TextView
	        android:id="@+id/input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/input"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <EditText
	        android:id="@+id/inputText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:ems="10"
	        android:inputType="textNoSuggestions"
			android:imeOptions="actionSearch" >
	        <requestFocus />
	    </EditText>
		<CheckBox
		        android:id="@+id/search_substrings"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/search_substrings" />
	    <Button
	        android:id="@+id/searchButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/search_words" 
	        style="@style/ButtonText"
	        android:background="@drawable/btn_black"/>

	     <TextView
	        android:id="@+id/results"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        style="@style/textStyle"
	        android:textIsSelectable="true"/>
	        
	     <ListView
		    android:id="@+id/wordList"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center_vertical|center_horizontal" />
	     
</LinearLayout>